fix: window manager buttons too cramped

--- a/src/Components/Layout/layout.scss
+++ b/src/Components/Layout/layout.scss
@@ -266,3 +266,8 @@
 	overflow: auto;
 	flex: 1;
 }
+
+#maximize {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
